@@ -2,7 +2,6 @@ package com.kostavows.transaction.config;
 
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-import org.springframework.http.HttpMethod;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
@@ -15,66 +14,38 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 @EnableWebSecurity
 public class SecurityConfig {
 
+   
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
         http
-            // 1. Matikan CSRF (karena pakai JWT)
-            .csrf(csrf -> csrf.disable())
-
-            // 2. CORS – biar Swagger & frontend dari domain lain bisa akses
             .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-
-            // 3. Stateless (JWT, bukan session)
-            .sessionManagement(session -> session
-                .sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-
-            // 4. Aturan akses endpoint
+            .csrf(csrf -> csrf.disable())
+            .sessionManagement(s -> s.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
             .authorizeHttpRequests(auth -> auth
-                // Swagger UI & OpenAPI docs → semua boleh akses
-                .requestMatchers(
-                    "/swagger-ui/**",
-                    "/swagger-ui.html",
-                    "/v3/api-docs/**",
-                    "/swagger-resources/**",
-                    "/webjars/**"
-                ).permitAll()
-
-                // Register & Login → publik
-                .requestMatchers("/auth/register", "/auth/login").permitAll()
-                .requestMatchers(HttpMethod.POST, "/auth/register").permitAll()
-                .requestMatchers(HttpMethod.POST, "/auth/login").permitAll()
-
-                // Root & favicon biar ga 403
-                .requestMatchers("/", "/favicon.ico").permitAll()
-
-                // Semua endpoint lain → wajib JWT (nanti dicek di JwtAuthenticationFilter)
+                .requestMatchers("/auth/**", "/swagger-ui/**", "/v3/api-docs/**", 
+                                 "/swagger-resources/**", "/webjars/**", "/", "/favicon.ico").permitAll()
                 .anyRequest().authenticated()
             )
-
-            // 5. Matikan Basic Auth & Form Login biar ga muncul pop-up
-            .httpBasic(httpBasic -> httpBasic.disable())
-            .formLogin(form -> form.disable());
-
-        // JWT Filter akan kamu tambahkan nanti di class terpisah (JwtAuthenticationFilter)
-        // http.addFilterBefore(jwtFilter, UsernamePasswordAuthenticationFilter.class);
+            .httpBasic(b -> b.disable())
+            .formLogin(f -> f.disable());
 
         return http.build();
     }
-
-    // CORS – biar Swagger & frontend dari Vercel/Netlify/127.0.0.1 bisa akses
+   
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration config = new CorsConfiguration();
-        config.setAllowedOriginPatterns(Arrays.asList("*"));        // sementara semua domain
-        config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        config.setAllowedHeaders(Arrays.asList("*"));
+        config.setAllowedOriginPatterns(List.of("*"));
+        config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        config.setAllowedHeaders(List.of("*"));
         config.setAllowCredentials(true);
+        config.setMaxAge(3600L);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", config);
